<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:layout_margin="5dp"
    tools:context=".DialerActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:elevation="10dp"
        android:padding="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="12sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/TextViewPhone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:hint="@string/_1234567890"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ImageView_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:src="@drawable/ic_backspace" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="6">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:elevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/Button_one"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_1"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/Button_two"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_2"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/Button_three"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_3"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/Button_four"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_4"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/Button_five"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_5"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/Button_six"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_6"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/Button_seven"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_7"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/Button_eight"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_8"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/Button_nine"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_9"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/Button_star"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/star"
                            android:textColor="@color/black"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/Button_zero"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/_0"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/Button_hash"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:text="@string/hash"
                            android:textColor="@color/black"
                            android:textSize="36sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/Button_Call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/black"
        android:padding="5dp"
        android:text="@string/call"
        android:textColor="#89FF00"
        android:textSize="34sp"
        android:textStyle="bold" />

</RelativeLayout>
